--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.anair.flyway</groupId>
 	<artifactId>flyway-versioning</artifactId>
-	<version>1.0.0</version>
-	<name>Versioning flyway scripts consistently and automatically</name>
-	<description>Versioning flyway scripts consistently and automatically</description>
+	<version>2.0.0</version>
+	<name>Version flyway scripts consistently and automatically</name>
+	<description>Version flyway scripts consistently and automatically</description>
 
 	<developers>
 		<developer>
@@ -16,12 +16,17 @@
 
 	<inceptionYear>2014</inceptionYear>
 	
+	<properties>
+		<java.version>1.8</java.version>
+		<flyway.maven.plugin.version>4.2.0</flyway.maven.plugin.version>
+	</properties>
+	
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.3.2</version>
+				<version>1.6.0</version>
 				<executions>
 					<execution>
 						<id>version-flyway-scripts</id>
@@ -40,7 +45,7 @@
 			<plugin>
 				<groupId>com.googlecode.flyway</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
-				<version>2.0.3</version>
+				<version>${flyway.maven.plugin.version}</version>
 
 
 				<configuration>
@@ -67,23 +72,32 @@
 					<initOnMigrate>false</initOnMigrate>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.181</version>
+			<version>1.4.196</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
+			<version>2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
